Gjort master router

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                     <a href="docs/README.md">→ Dokumentationsindex</a>
                     <a href="docs/ROLES.md">→ Roller och ansvar</a>
                     <a href="docs/WORKFLOW.md">→ Arbetsflöde och gates</a>
+                    <a href="docs/QA_CHECKLIST.md">→ QA-kontrollista</a>
+                    <a href="docs/RELEASE_NOTES.md">→ Release-process</a>
+                    <a href="docs/MIGRATION_CHECKLIST.md">→ Anpassa mallen</a>
                 </div>
             </div>
 
@@ -127,6 +130,7 @@
                 <h2>🎯 Prompts</h2>
                 <p>Rollspecifika prompter för Copilot Chat.</p>
                 <div class="links">
+                    <a href=".github/prompts/router.prompt.md">→ 🔍 Router (börja här!)</a>
                     <a href=".github/prompts/analyst.prompt.md">→ Analyst</a>
                     <a href=".github/prompts/architect.prompt.md">→ Architect</a>
                     <a href=".github/prompts/planner.prompt.md">→ Planner</a>
@@ -143,7 +147,8 @@
                 <h2>⚡ Snabbstart</h2>
                 <p>Börja använda arbetsflödet på 3 steg.</p>
                 <div class="links">
-                    <a href="README.md#användning-i-copilot-chat">→ Användning i Copilot Chat</a>
+                    <a href="README.md#-snabbstart--använd-denna-mall">→ Hur använder jag mallen?</a>
+                    <a href=".github/prompts/router.prompt.md">→ Välj rätt roll (Router)</a>
                     <a href="docs/ROLES_ONE_PAGER.md">→ One-pager</a>
                 </div>
             </div>
