minnes test fungerar

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         <h1>🚀 agentcopilot</h1>
         <p class="subtitle">En arbetsflödesmall för agentiska Copilot Chat-baserade projekt</p>
 
+        <!-- Add theme toggle button -->
+        <button id="theme-toggle" style="margin-bottom: 20px; padding: 10px 20px; font-size: 1em; cursor: pointer;">
+            Växla till Dark Mode
+        </button>
+
         <div class="sections">
             <!-- Guide Section -->
             <div class="section">
