--- a/timer.html
+++ b/timer.html
@@ -3,40 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer App — Analog Nedräkning</title>
-    <link rel="stylesheet" href="timer.css">
-    <script src="timer.js" defer></script>
+    <title>Demo — Timer</title>
 </head>
 <body>
-    <div class="container">
-        <h1>⏱️ Timer</h1>
-
-        <!-- Add theme toggle button -->
-        <button id="theme-toggle" style="margin-bottom: 20px; padding: 10px 20px; font-size: 1em; cursor: pointer;">
-            Växla till Dark Mode
-        </button>
-
-        <!-- Canvas för analog klocka -->
-        <canvas id="clock" width="400" height="400"></canvas>
-
-        <!-- Slider för att ställa in tid (0-60 minuter) -->
-        <div class="slider-container">
-            <label for="slider">Ställ in tid:</label>
-            <input type="range" id="slider" min="0" max="3600" value="300" step="1">
-        </div>
-
-        <!-- Display för digital tid -->
-        <div id="display">05:00</div>
-
-        <!-- Kontrollknappar -->
-        <div class="controls">
-            <button id="startBtn">Start</button>
-            <button id="stopBtn">Stop</button>
-            <button id="resetBtn">Reset</button>
-        </div>
-
-        <!-- Meddelande när timer når 0 -->
-        <div id="message" style="display: none;"></div>
-    </div>
+    <h1>Timer Demo</h1>
+    <p>Denna sida är en del av en mall för att demonstrera timer-funktionalitet.</p>
 </body>
 </html>
